--- a/style.css
+++ b/style.css
@@ -65,7 +65,7 @@ button {
 
 #mainStuff{
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
 }
 
 #languageDrop{
